<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pencils.PencilsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarMain"
        android:layout_width="0dp"
        app:title="@string/cart_title"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:background="@android:color/white"
        android:gravity="center|left"
        android:padding="15dp"
        android:paddingStart="25dp"
        android:text="@string/cart_quantity"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarMain" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclePencils"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartQuantity"
        tools:listitem="@layout/item_pencil" />

    <LinearLayout
        android:id="@+id/total_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclePencils">

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_text_left"
            android:text="@string/total"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/font_total_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclePencils" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_text_right"
            android:text="$12"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="444dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtotal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/shipping_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_layout">

        <TextView
            android:id="@+id/textSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_left"
            android:text="@string/subtotal"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size"
             />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/subTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_right"
            android:text="$13"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shipping_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotal_layout">

        <TextView
            android:id="@+id/textShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_left"
            android:text="@string/shipping"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_right"
            android:text="$14"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tax_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipping_layout">

        <TextView
            android:id="@+id/textTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_left"
            android:text="@string/tax"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top|left|left"
            android:padding="@dimen/margin_text_right"
            android:text="$14"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>